add new directive highlight

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-session-mai></app-session-mai>
+  <app-formation-session-mai></app-formation-session-mai>
 </body>
 </html>
